force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/talkdesk__Talkdesk_Disposition_Code__c.object-meta.xml
<CustomObject>
    <label>Talkdesk Disposition Code</label>
    <nameField>
        <label>Disposition Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talkdesk Disposition Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>