force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/fields/talkdesk__External_ID__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__External_ID__c</fullName>
    <description>Talkdesk ID of Disposition Code</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>