force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/fields/talkdesk__Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Showing was disposition code deleted from Talkdesk App or not</description>
    <inlineHelpText>Is set to false if there is no such disposition code in Talkdesk</inlineHelpText>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>