force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/fields/talkdesk__Label__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>