force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/fields/talkdesk__Talkdesk_Id__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Talkdesk_Id__c</fullName>
    <externalId>true</externalId>
    <label>Talkdesk Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>