force-app/main/default/objects/talkdesk__Talkdesk_Disposition_Code__c/fields/talkdesk__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__Timestamp__c</fullName>
    <label>Timestamp of event creation</label>
    <type>DateTime</type>
</CustomField>